Fix nav responsiveness on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -165,6 +165,7 @@ a[href]:hover,
 a[href]:active {
 	color: var(--text-color-link-active);
 	text-decoration: underline;
+	text-underline-position: from-font;
 }
 
 main,
@@ -262,7 +263,8 @@ header {
 /* Nav */
 .nav {
 	display: flex;
-	gap: .5em 1em;
+	flex-wrap: wrap;
+	gap: 0.5em 1em;
 	padding: 0;
 	margin: 0;
 	list-style: none;
@@ -275,6 +277,7 @@ header {
 }
 .nav a[href][aria-current="page"] {
 	text-decoration: underline;
+	text-underline-position: from-font;
 }
 
 /* Nav in footer */
